<resources>
    <string name="app_name">repoyo</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_productivity">Productivity</string>
    <string name="msg_sequrity_questi">Sequrity Question</string>
    <string name="lbl_pricing_plans">Pricing &amp; Plans</string>
    <string name="msg_michellerock_gm">Michellerock@gmail.com</string>
    <string name="msg_general_setting">General settings</string>
    <string name="lbl_65">65%</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="msg_comment_setting">Comment Settings</string>
    <string name="lbl_12_03_22">12/03/22</string>
    <string name="lbl_10_05_am">10:05 am</string>
    <string name="msg_what_was_your_f">What was your first pet name?</string>
    <string name="lbl_website">Website</string>
    <string name="msg_rashed_othman_s">Rashed Othman Salem</string>
    <string name="lbl_write_a_review">Write a review</string>
    <string name="lbl_rose_j_henry">Rose J. Henry</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_09_05_pm">09:05 pm</string>
    <string name="lbl_file_two_pdf">File-two.pdf</string>
    <string name="lbl_abc">\@ABC</string>
    <string name="lbl_file_03_pdf">File-03.pdf</string>
    <string name="lbl_tv_shows">TV Shows</string>
    <string name="msg_battlegrounds_m">Battlegrounds Mobile India iOS release date</string>
    <string name="lbl_all_notes">All Notes</string>
    <string name="msg_import_blogs_fr">Import Blogs From</string>
    <string name="lbl_documents">Documents</string>
    <string name="lbl_rewards">Rewards</string>
    <string name="lbl_recently_added">Recently Added</string>
    <string name="lbl_shreyacodes">ShreyaCodes</string>
    <string name="msg_modified_yester">Modified Yesterday</string>
    <string name="msg_webflow_develop">Webflow Developer</string>
    <string name="lbl_jacklyn_kovach">Jacklyn Kovach</string>
    <string name="lbl_enter_email_id">Enter Email Id</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_unstoppable">Unstoppable</string>
    <string name="msg_enter_your_firs">Enter Your First Name</string>
    <string name="lbl_design_group">Design Group</string>
    <string name="lbl_michelle">Michelle</string>
    <string name="lbl_25_02_22">25/02/22</string>
    <string name="lbl_10_04_22">10/04/22</string>
    <string name="msg_send_automatica">Send Automatically</string>
    <string name="msg_young_mill_ft_u">Young Mill ft UnSapa</string>
    <string name="lbl_translation">Translation</string>
    <string name="msg_ashfaksayem_gma">ashfaksayem@gmail.com</string>
    <string name="lbl_design">Design</string>
    <string name="lbl_french">French</string>
    <string name="lbl_30">30</string>
    <string name="lbl_media">Media</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_voice">Voice</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_dubai_u_a_e">Dubai, U.A.E</string>
    <string name="lbl_1_day_ago">1 day ago</string>
    <string name="msg_landon_mosby_h">Landon Mosby: Hiiii</string>
    <string name="lbl_custom_form">Custom Form</string>
    <string name="lbl_the_wicked">The Wicked</string>
    <string name="lbl_olosho_na_work">Olosho Na Work</string>
    <string name="lbl_110">$110</string>
    <string name="msg_terms_and_condi">Terms And Conditions</string>
    <string name="msg_as_a_candidate">"As a candidate for the Webflow Developer position at 02100, I would like to introduce myself as an exceptional designer with a strong background in Webflow, I understand the impact that good design can have. In applying for this position, I am confident due to my recent job and freelance experience, as well as my education.&#xd;
&#xd;
As UI/UX Designer at Unseen Works DMCC, I created innovative, creative, and digital experiences using a variety of software and concepts. An enthusiast of Figma and web design, I excel in both. I've always had a keen eye for how things fit together and do not. Other members of the team sought my advice on their designs.&#xd;
&#xd;
I\u2019m applying for this position because I want a career in Webflow, I love how Webflow gave me the ability to bring designs to life. I realize that I don\u2019t have a strong background in Html etc., but I\u2019m willing to learn it to get the position."</string>
    <string name="lbl_senorita">Senorita</string>
    <string name="lbl_benito_nickel">Benito Nickel</string>
    <string name="lbl_2_star">2 star</string>
    <string name="lbl_english">English</string>
    <string name="lbl_24">24%</string>
    <string name="lbl_dark">Dark</string>
    <string name="msg_username_or_ema">Username or Email</string>
    <string name="lbl_20_apr">20 APR</string>
    <string name="lbl_contents">Contents</string>
    <string name="msg_angelyn_weiner">Angelyn Weiner: Ok</string>
    <string name="lbl_rock">Rock</string>
    <string name="lbl_offers">Offers</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_13_25_month">($13.25/ month)</string>
    <string name="msg_the_reason_behi">The reason behind their disappointment is that iPhone users have been..</string>
    <string name="lbl_29_03_22">29/03/22</string>
    <string name="lbl_michele_d">Michele D.</string>
    <string name="msg_enter_your_last">Enter Your Last Name</string>
    <string name="lbl_4_0">4.0</string>
    <string name="lbl_01_03_22">01/03/22</string>
    <string name="lbl_refer_a_friend">Refer a Friend</string>
    <string name="msg_content_managem">Content Management</string>
    <string name="msg_abc123_gmail_co">abc123@gmail.com</string>
    <string name="lbl_12">+1</string>
    <string name="lbl_13">1</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_comments">Comments</string>
    <string name="lbl_document_opener">Document Opener</string>
    <string name="lbl_blogs">Blogs</string>
    <string name="msg_carmelo_roussea">Carmelo Rousseau</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_files">Files</string>
    <string name="lbl_friends_group">Friends Group</string>
    <string name="lbl_pledge_tracking">Pledge Tracking</string>
    <string name="lbl_submit">Submit</string>
    <string name="msg_help_and_feedba">Help and feedback</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_50000">$50000</string>
    <string name="msg_turn_off_spam_c">Turn Off Spam Comments</string>
    <string name="lbl_19_apr">19 APR</string>
    <string name="lbl_inappropriate">Inappropriate</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_pluto">Pluto</string>
    <string name="lbl_kai_caudle">Kai Caudle</string>
    <string name="msg_danial_sams_l">Danial Sams  @Lorme impsum     26 sep 2017</string>
    <string name="msg_didn_t_recieved">Didn\u2019t Recieved Code ? Resend </string>
    <string name="msg_otp_verificatio">OTP Verification</string>
    <string name="lbl_lorem_ipsum">Lorem ipsum</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_file_05_pdf">File-05.pdf</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="msg_why_are_you_fla">Why Are You flagging This?</string>
    <string name="lbl_1_2323232323">+1 2323232323</string>
    <string name="lbl_landon_mosby">Landon Mosby</string>
    <string name="lbl_1_star">1 star</string>
    <string name="lbl_theme">Theme</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_ali_comer">Ali Comer</string>
    <string name="lbl_21_59_month">($21.59/ month)</string>
    <string name="msg_enter_your_emai">Enter Your Email</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_folder">Folder</string>
    <string name="lbl_spam">Spam</string>
    <string name="msg_feedback_collec">Feedback collection</string>
    <string name="lbl_blog_importing">Blog Importing</string>
    <string name="lbl_answer">Answer</string>
    <string name="msg_blog_posts_mana">Blog Posts Management</string>
    <string name="lbl_1_472_reviews">1,472 Reviews</string>
    <string name="lbl_saved_songs">Saved Songs</string>
    <string name="msg_i_m_flat_earthe">I\u2019m flat earther</string>
    <string name="lbl_raised">Raised</string>
    <string name="lbl_not_now">Not Now</string>
    <string name="lbl_home">Home</string>
    <string name="msg_database_syste">Database 
System Week 4</string>
    <string name="lbl_first_name">First Name</string>
    <string name="msg_create_your_acc">Create Your Account</string>
    <string name="msg_krafton_has_bee">Krafton has been dropping hints about 
the BGMI iOS version for a few days. 

In the social media post that announced special rewards on 50 million downloads dated August 5, 2021, the caption clearly stated "We are preparing for all Indian players to receive rewards regardless of their OS [apple emoji]." Additionally, Krafton also shared a reveal poster that has the Apple mascot in it. While speculations about Battlegrounds Mobile India release date have been made in the past, Krafton might have revealed the date accidentally.</string>
    <string name="msg_today_s_shoppng">Today\u2019s Shoppng List
Ticket App Travel...</string>
    <string name="msg_anton_ligon_l">Anton Ligon  @Lorme impsum     26 sep 2017</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum vulputate nisi aenean risus, nulla ultrices feugiat facilisi ut. In nunc tincidunt dolor placerat suscipit. Risus justo elementum at in malesuada fringilla lacus pellentesque.</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae semper nibh justo, augue commodo suspendisse pharetra turpis. Amet, tempus dui urna amet.</string>
    <string name="lbl_file_01_pdf">File-01.pdf</string>
    <string name="lbl_top_reviews">Top Reviews</string>
    <string name="msg_lorem_ipsum_dol7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mattis sit tortor nibh diam velit tempor, mi. </string>
    <string name="msg_23_may_2022_12">23 may 2022, 12:00</string>
    <string name="lbl_ashfak_sayem">Ashfak Sayem</string>
    <string name="msg_lorem_ipsum_dol6">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="msg_modified_on_23r">Modified on 23rd February,2021</string>
    <string name="msg_lorem_ipsum_dol5">Lorem ipsum dolor sit amet, </string>
    <string name="lbl_dark_mode">Dark mode</string>
    <string name="msg_lorem_ipsum_dol4">Lorem ipsum dolor sit amet, consectetur adipiscing.</string>
    <string name="msg_director_of_say">Director of Say It Now</string>
    <string name="lbl_8000">$8000</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_man_marin">Man Marin</string>
    <string name="lbl_goal">Goal</string>
    <string name="msg_rate_your_exper">Rate Your Experience</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_features">Features</string>
    <string name="lbl_blogs_uploaded">Blogs Uploaded</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_enter_mobile_nu">Enter Mobile Number</string>
    <string name="lbl_hello">Hello</string>
    <string name="lbl_4_0_out_of_5">4.0 out of 5</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_1356">1356</string>
    <string name="msg_enter_your_emai2">Enter Your Email Id</string>
    <string name="msg_enter_your_phon">Enter Your Phone Number</string>
    <string name="lbl_donors">Donors</string>
    <string name="lbl_kids_education">Kids Education</string>
</resources>