<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listrectangle1323RowModel" type="com.repoyo.app.modules.pledgetracking.data.model.Listrectangle1323RowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnrectangle1323"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_5">
        <ImageView android:id="@+id/imageRectangle1323"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_114pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_364pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_3pxh}"
            imageRes="@{@drawable/img_rectangle1323}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle1323"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtKidsEducation"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{listrectangle1323RowModel.txtKidsEducation}"
            style="@style/txtGilroymedium16_9" tools:text="@string/lbl_kids_education"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@{listrectangle1323RowModel.txtLanguage}"
            style="@style/txtGilroyregular14_1" tools:text="@string/msg_lorem_ipsum_dol7"/>
        <LinearLayout android:id="@+id/linearRowdonors"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumndonors"
                android:layout_height="wrap_content"
                android:layout_weight="0.33" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStylecornerRadius_7">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDonors"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtDonors}"
                    style="@style/txtGilroyregular12" tools:text="@string/lbl_donors"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZipcode"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtZipcode}"
                    style="@style/txtGilroybold18" tools:text="@string/lbl_1356"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnraised"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_weight="0.33" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStylecornerRadius_7">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRaised"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtRaised}"
                    style="@style/txtGilroyregular12" tools:text="@string/lbl_raised"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtPrice}"
                    style="@style/txtGilroybold18" tools:text="@string/lbl_8000"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumngoal"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_weight="0.33" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStylecornerRadius_7">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGoal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtGoal}"
                    style="@style/txtGilroyregular12" tools:text="@string/lbl_goal"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangle1323RowModel.txtPriceOne}"
                    style="@style/txtGilroybold18" tools:text="@string/lbl_50000"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
