<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="customFormVM" type="com.repoyo.app.modules.customform.data.viewmodel.CustomFormVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearCustomForm"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIPhoneXorne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftSide"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_leftside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_leftside"/>
                <ImageView android:id="@+id/imageRightSide"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_271pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rightside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowarrowleft"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="@dimen/_11pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCustomForm"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_107pxh"
                android:layout_weight="0.92" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{customFormVM.customFormModel.txtCustomForm}"
                style="@style/txtGilroysemibold24" tools:text="@string/lbl_custom_form"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelM"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelM}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_first_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_firs"
            android:id="@+id/etInputField" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelMOne}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_last_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_last"
            android:id="@+id/etInputFieldOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldOneValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelMTwo}"
            style="@style/txtGilroymedium16_4" tools:text="@string/lbl_email_id"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai2"
            android:id="@+id/etInputFieldTwo"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldTwoValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMThree"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelMThree}"
            style="@style/txtGilroymedium16_4" tools:text="@string/lbl_phone_number"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_phon"
            android:id="@+id/etInputFieldThree"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldThreeValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMFour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelMFour}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:drawableEnd="@drawable/img_vector_bluegray_200_13x16"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_enter_password"
            android:id="@+id/etInputFieldFour"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_13pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldFourValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputLabelMFive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{customFormVM.customFormModel.txtInputLabelMFive}"
            style="@style/txtGilroymedium16" tools:text="@string/msg_confirm_passwor"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
            android:drawableEnd="@drawable/img_vector_bluegray_200_13x16"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_enter_password"
            android:id="@+id/etInputFieldFive"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_13pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={customFormVM.customFormModel.etInputFieldFiveValue}"
            android:textColorHint="@color/bluegray_200"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSubmit"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_submit"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_submit"/>
    </LinearLayout>
</layout>
